Fixed alignment issues, working on more styling changes, making mobile friendly

--- a/todo_list_app/src/App.scss
+++ b/todo_list_app/src/App.scss
@@ -8,6 +8,13 @@
   display: block;
   padding: 3%;
 
+  
+  @media(max-width: 750px) {
+      max-width: 89%;
+      border: none;
+      
+  }
+
   .btn-app-submit {
     @media(max-width: 750px) {
       margin-top: 10px;
